feat(sql-importer) lisible code dataConfig , simplify boucle - MS